added swagger for compliance-lists and updated controller to accept relevant body params from the request
